# Tank_War

./: .gitignore  Dockerfile  Game_Process  Game_Process.cpp  Game_Process.h  Map.cpp  Map.h  README.md  Room_Game_Process  Room_Game_Process.h  Room_Process.cpp  ServerDockerBuild.sh  Style.cpp  Tank.h  Tank_Server  Tank_Server.cpp  Tank_Server.h  Tank_Server_main  Tank_Server_main.cpp  Tank_War.sln  WindowsProject1.sln  docker-compose.yml  header.cpp  header.h
Client/: README.md
Resource/: Cursor.cur
Server/: CMakeLists.txt  README.md
Server/config/: config.ini
Server/libs/: net.lib  net_d.lib  public.lib  public_d.lib
Server/source/GameService/include/: GameDataDef.h  GameInstance.h  GameService.h  GameSession.h  NetworkMessageSender.h
Server/source/GameService/include/ECS/Components/: AIControl.h  AllComponent.h  BoundaryPhysisc.h  BulletProperty.h  Controller.h  GIFAnimator.h  Health.h  HealthShow.h  LifeTime.h  Movement.h  Physics.h  PlayerInput.h  PropProperty.h  RenderBase.h  Sprite.h  Tags.h  TankProperty.h  TankVisual.h  Transform.h  WallProperty.h  Weapon.h
Server/source/GameService/include/ECS/Core/: ComponentArray.h  ComponentManager.h  ComponentTypes.h  Entity.h  Entity.inl  EntityManager.h  EventSystem.h  IComponent.h  System.h  SystemManager.h  SystemManager.inl  SystemTypes.h  Types.h  World.h  World.inl
Server/source/GameService/include/ECS/Event/: ECSEventDef.h  SyncEventDef.h
Server/source/GameService/include/ECS/Factory/: BulletFactory.h  PropFactory.h  TankFactory.h  WallFactory.h
Server/source/GameService/include/ECS/Systems/: AIInputSystem.h  AllSystem.h  BulletSystem.h  CheckGameOverSystem.h  DestroySystem.h  HealthSystem.h  LifeTimeSystem.h  MovementSystem.h  PhysicsSystem.h  PropGenerateSystem.h  PropSystem.h  ServerInputSystem.h  ServerStateSyncStstem.h  ServerStateSyncSystem.h  ServerSyncSystem.h  TankSystem.h  VelocityControlSystem.h  WallSystem.h  WeaponSystem.h
Server/source/GameService/include/Helper/: DynamicFpsController.h  TripleBuffer.h  math2d.h
Server/source/GameService/include/Manager/: MapManager.h
Server/source/GameService/src/: GameInstance.cpp  GameService.cpp  MapManager.cpp  NetworkMessageSender.cpp  main.cpp
Server/source/GameService/src/ECS/: AIInputSystem.cpp  BulletFactory.cpp  BulletSystem.cpp  CheckGameOverSystem.cpp  DestroySystem.cpp  DynamicFpsController.cpp  Entity.cpp  EntityManager.cpp  HealthSystem.cpp  LifeTimeSystem.cpp  MovementSystem.cpp  PhysicsSystem.cpp  PropFactory.cpp  PropGenerateSystem.cpp  PropSystem.cpp  ServerInputSystem.cpp  ServerStateSyncStstem.cpp  ServerStateSyncSystem.cpp  ServerSyncSystem.cpp  SyncEventDef.cpp  System.cpp  SystemManager.cpp  TankFactory.cpp  TankSystem.cpp  VelocityControlSystem.cpp  WallFactory.cpp  WallSystem.cpp  WeaponSystem.cpp  World.cpp
Server/source/GameStateCenter/include/: GameStateManager.h  GameStateService.h  ServiceDiscovery.h  ServiceRegistry.h  ServiceRegistryManager.h
Server/source/GameStateCenter/include/StateDef/: LobbyDef.h  RoomDef.h  UserDef.h
Server/source/GameStateCenter/include/StateManager/: LobbyManager.h  RoomManager.h  UserManager.h
Server/source/GameStateCenter/src/: GameStateManager.cpp  GameStateService.cpp  LobbyManager.cpp  RoomManager.cpp  ServiceDiscovery.cpp  ServiceRegistry.cpp  ServiceRegistryManager.cpp  UserManager.cpp  main.cpp
Server/source/UserFrontendService/include/: LobbyDataDef.h  LobbySubService.h  LobbyUserDef.h  LoginSubService.h  UserFrontendService.h
Server/source/UserFrontendService/src/: LobbySubService.cpp  LoginSubService.cpp  UserFrontendService.cpp  main.cpp
Server/source/public/include/: BaseService.h  EndPointConfig.h  MessageDelegator.h  ServiceDiscoveryClient.h  ServiceRegistrar.h  ServiceRegistryData.h  command.h  jwtHelper.h  stdafx.h  tools.h
Server/source/public/include/ApplicationLayerCommunication/: JsonProtocolClient.h  JsonProtocolServer.h  JsonProtocolSession.h
Server/source/public/include/ApplicationLayerConnectManager/: JsonCommunicateConnectManager.h
Server/source/public/include/GameStateDef/: RoomDef.h  UserDef.h
Server/source/public/include/NetWorkConnectManager/: BaseConnectManager.h  CustomTcpSessionConnectManager.h
Server/source/public/include/SessionManager/: BaseSessionManager.h  CustomTcpSessionManager.h
Server/source/public/src/: BaseConnectManager.cpp  BaseService.cpp  BaseSessionManager.cpp  CustomTcpSessionConnectManager.cpp  CustomTcpSessionManager.cpp  JsonCommunicateConnectManager.cpp  JsonProtocolClient.cpp  JsonProtocolServer.cpp  JsonProtocolSession.cpp  MessageDelegator.cpp  ServiceDiscoveryClient.cpp  ServiceRegistrar.cpp  ServiceRegistryData.cpp  jwtHelper.cpp  tools.cpp
Tank_War/: D2D.cpp  D2D.h  D2D_Scene.cpp  D2D_Scene.h  Game.cpp  Game.h  GameSceneManager.h  Game_Component.cpp  Game_Component.h  Map.cpp  Map.h  Method.cpp  Method.h  Network.cpp  Network.h  Render.cpp  Render.h  Scene.h  Scene_inner.cpp  Scene_outer.cpp  Style.cpp  Style.h  Tank.cpp  Tank.h  Tank_AI.cpp  Tank_AI.h  Tank_War.cpp  Tank_War.rc  Tank_War.vcxproj  Tank_War.vcxproj.filters  collision.cpp  collision.h  hands.cpp  header.cpp  header.h  keymap.cpp  keymap.h  resource.h
WindowsProject1/: D2D_Scene.cpp  D2D_Scene.h  Method.cpp  Method.h  RCa19264  Scene.cpp  Scene.h  Sence.cpp  Tank.cpp  Tank.h  WindowsProject1.cpp  WindowsProject1.rc  WindowsProject1.vcxproj  WindowsProject1.vcxproj.filters  header.h  resource.h
WindowsProject2/: WindowsProject2.cpp  WindowsProject2.rc  WindowsProject2.vcxproj
docker-config/: game-service.ini  game-state-center.ini  user-frontend.ini
include/: Bullet.h  Game_Component.h  Hall_Process.h  Log.h  Map.h  Object.h  Prop.h  Room_Game_Process.h  Tank.h  Tank_Server.h  collision.h  header.h
protobuf/: myprotocol.pb.cc  myprotocol.pb.h  myprotocol.proto
source/: Game_Component.h  Game_Process.cpp  Map.cpp  Map.h  Room_Game_Process.h  Room_Process.cpp  Style.cpp  Style.h  Tank.h  Tank_Server.cpp  Tank_Server.h  Tank_Server_main.cpp  header.h
src/: Game_Component.cpp  Game_Process.cpp  Hall_Process.cpp  Map.cpp  Object.cpp  (+6 more)
(+331 files in other folders)
